# sentence-base-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
frequency_lists/: jp.json
migrations/2021-10-24-092444_create_users/: up.sql
migrations/2021-10-31-130034_add_token_generation_column_to_users/: down.sql  up.sql
migrations/2021-11-01-150732_create_words/: down.sql  up.sql
migrations/2021-11-01-151902_create_sentences/: down.sql  up.sql
migrations/2021-11-02-165323_create_timestamp_triggers/: down.sql  up.sql
migrations/2021-11-02-170336_create_mining_batches/: down.sql  up.sql
src/: analyzer.rs  database.rs  field_validator.rs  frequency_list.rs  helpers.rs  jwt.rs  lib.rs  main.rs  responses.rs  routes.rs  schema.rs
src/models/: mining_batch.rs  mod.rs  sentence.rs  user.rs  word.rs
src/routes/: analyzer.rs  authentication.rs  catcher.rs  mod.rs  root.rs  sentences.rs
tests/: analyzer.rs  authentication.rs  common.rs  sentences.rs
