[package]
name = "sentence-base"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = { version= "0.5.0-rc.1", features = ["json"] }
mecab = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
diesel = { version = "1.4.2", features = ["postgres", "uuidv07", "r2d2" ] }
r2d2 = "0.8.8"
validator = { version = "0.12", features = ["derive"] }
