[package]
name = "sentence_base"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = { version= "0.5.0-rc.1", features = ["json"] }
mecab = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
diesel = { version = "1.4.2", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
r2d2 = "0.8.8"
validator = { version = "0.12", features = ["derive"] }
bcrypt = "0.10"
jwt = "0.15.0"
sha2 = "0.9.8"
hmac = "0.11.0"
regex = "1.5.4"
itertools = "0.10.1"
chrono = { version = "0.4.19", features = ["serde"] }

[dev-dependencies]
diesel_migrations = "1.4.0"
